--- a/package.json
+++ b/package.json
@@ -1,25 +1,29 @@
 {
-  "name": "webpack-template",
-  "version": "1.0.0",
-  "description": "",
-  "private": true,
-  "scripts": {
-    "build": "webpack"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/damianb53/webpack-template.git"
-  },
-  "keywords": [],
-  "author": "damianb53",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/damianb53/webpack-template/issues"
-  },
-  "homepage": "https://github.com/damianb53/webpack-template#readme",
-  "devDependencies": {
-    "html-webpack-plugin": "^3.2.0",
-    "webpack": "^4.41.6",
-    "webpack-cli": "^3.3.11"
-  }
+    "name": "webpack-template",
+    "version": "1.0.0",
+    "description": "",
+    "private": true,
+    "scripts": {
+        "build": "webpack"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/damianb53/webpack-template.git"
+    },
+    "keywords": [],
+    "author": "damianb53",
+    "license": "MIT",
+    "bugs": {
+        "url": "https://github.com/damianb53/webpack-template/issues"
+    },
+    "homepage": "https://github.com/damianb53/webpack-template#readme",
+    "devDependencies": {
+        "css-loader": "^3.4.2",
+        "html-webpack-plugin": "^3.2.0",
+        "node-sass": "^4.13.1",
+        "sass-loader": "^8.0.2",
+        "style-loader": "^1.1.3",
+        "webpack": "^4.41.6",
+        "webpack-cli": "^3.3.11"
+    }
 }
